add row functionality

--- a/app/createdd.html
+++ b/app/createdd.html
@@ -35,7 +35,7 @@
     <td><input type=text></td>
     <td><input type=text></td>
     <td><input type=text></td>
-    <td></td>
+    <td><input type=checkbox></input></td>
 </table>
 
 <button id="addrow">Add Row</button>
