Table adding function

--- a/app/createdd.html
+++ b/app/createdd.html
@@ -1,6 +1,8 @@
 
 <p>Data Dictionary Page</p>
-<button id="addtable">Add Table</button>
+<!-- stylesheet only here to test offline -->
+<link rel="stylesheet" href="style.css">
+<button id="addtable" onclick="addTable()">Add Table</button>
 <!-- Note for future self: Create entirety of HTML page before
     beginning javascript, that way it will be easier-->
 
