--- a/app/createdd.html
+++ b/app/createdd.html
@@ -1,5 +1,5 @@
 
-<p>Data Dictionary Page</p>
+<p>Your Data Dictionary</p>
 <!-- stylesheet only here to test offline -->
 <link rel="stylesheet" href="style.css">
 <button id="addtable" onclick="addTable()">Add Table</button>
