--- a/app/login.html
+++ b/app/login.html
@@ -1,2 +1,7 @@
 <p>Login Page</p>
+<!-- stylesheet only here to test offline -->
+<link rel="stylesheet" href="style.css">
+<p>Username <input type="text"></input>
+<p>Password <input type="text"></input>
+<button>Submit</button>
 <script src="login.js"></script>
