--- a/app/createdd.html
+++ b/app/createdd.html
@@ -40,7 +40,7 @@
       <td><input type=text></td>
       <td><input type=text></td>
       <td><input type=checkbox></input></td>
-      <tr><td><button id="addrow1" onclick="idHandler()">Add Row</button></td></tr>
+      <tr><td><button id="addrow1" onclick="idHandler(event)">Add Row</button></td></tr>
   </tbody>
 
 </table>
