--- a/app/createdd.html
+++ b/app/createdd.html
@@ -1,5 +1,6 @@
 
-<p>Your Data Dictionary</p>
+<h3>Your Data Dictionary</h2>
+<h3 id="version">Version Number: 0.3</h3>
 <!-- stylesheet only here to test offline -->
 <link rel="stylesheet" href="style.css">
 <button id="addtable" onclick="addTable()">Add Table</button>
