placeholder replaces html

--- a/app/createdd.html
+++ b/app/createdd.html
@@ -10,7 +10,7 @@
 <table id="datadictionary">
   <tbody id="ddtable1">
     <tr>
-      <th colspan=2>Table Name <input type=text></th>
+      <th colspan=2><input type=text value="Table Name"></th>
     </tr>
     <tr>
       <th>Attribute Name</th>
