placeholder google stuff
need static ip for a client id

--- a/app/login.html
+++ b/app/login.html
@@ -1,7 +1,9 @@
 <p>Login Page</p>
 <!-- stylesheet only here to test offline -->
 <link rel="stylesheet" href="style.css">
+<p>Before you use the Data Dictionary designer you must sign using your Google account</p>
 <p>Username <input type="text"></input>
 <p>Password <input type="text"></input>
-<button>Submit</button>
+<p><a href="#landing" class="button">Submit</a></p>
+<div class="g-signin2" data-onsuccess="onSignIn"></div>
 <script src="login.js"></script>
