--- a/app/index.html
+++ b/app/index.html
@@ -20,5 +20,6 @@
       <div id="content"></div>
     </main>
     <script src="index.js"></script>
+    <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
   </body>
 </html>
