apparently insertRow and insertCell exist

--- a/app/createdd.html
+++ b/app/createdd.html
@@ -43,8 +43,9 @@
       <td><input type=checkbox></input></td>
       <tr><td><button id="addrow1" onclick="idHandler(event)">Add Row</button></td></tr>
   </tbody>
-
 </table>
+
+<button onclick="generateSQL()">Generate SQL</button>
 
 
 <script src="createdd.js"></script>
