--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="google-signin-client_id" content="525579174446-om8c829lbfhv4jb693327k9ot03e7nli.apps.googleusercontent.com">
     <title>RDBMS Data Dictionary Design</title>
     <link rel="stylesheet" href="style.css">
+
   </head>
   <body class="layout">
     <h1>Data Dictionary Design Application</h1>
@@ -20,6 +22,7 @@
       <div id="content"></div>
     </main>
     <script src="index.js"></script>
-    <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script type='text/javascript' src="https://rawgit.com/hiddentao/squel/master/dist/squel.min.js"></script>
   </body>
 </html>
