--- a/app/landing.html
+++ b/app/landing.html
@@ -1,2 +1,3 @@
 <h3>Landing page</h3>
-<p>This is where user data dictionaries will be shown</p>
+<p>You have not created any data dictionaries</p>
+<p><a href="#createdd" class="button">Create a Data Dictionary</a></p>
