--- a/app/createdd.html
+++ b/app/createdd.html
@@ -26,6 +26,7 @@
       <td><input type=text></td>
       <td>
         <select>
+          <option>None</option>
           <option>Primary Key</option>
           <option>Foreign Key</option>
           <option>Candidate Key</option>
