--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
       <nav class="layout-nav">
         <ul>
           <li><a href="#login">Log In</a></li>
-          <li><a href="#landing">Home</a></li>
+          <li><a href="#landing">Library</a></li>
           <li><a href="#createdd">Create Data Dictionary</a></li>
         </ul>
       </nav>
