--- a/app/login.html
+++ b/app/login.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="style.css">
 <p>Before you use the Data Dictionary designer you must sign using your Google account</p>
 <p>Username <input type="text"></input>
-<p>Password <input type="text"></input>
+<p>Password <input type="password"></input>
 <p><a href="#landing" class="button">Submit</a></p>
 <div class="g-signin2" data-onsuccess="onSignIn"></div>
 <script src="login.js"></script>
