--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <meta name="google-signin-client_id" content="525579174446-om8c829lbfhv4jb693327k9ot03e7nli.apps.googleusercontent.com">
     <title>RDBMS Data Dictionary Design</title>
+<!-- Stylesheets -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
 
   </head>
   <body class="layout">
@@ -24,5 +27,6 @@
     <script src="index.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script type='text/javascript' src="https://rawgit.com/hiddentao/squel/master/dist/squel.min.js"></script>
+    <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
   </body>
 </html>
