--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+
     <meta charset="utf-8">
     <meta name="google-signin-client_id" content="525579174446-om8c829lbfhv4jb693327k9ot03e7nli.apps.googleusercontent.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RDBMS Data Dictionary Design</title>
-
+    <!-- <script src="https://apis.google.com/js/platform.js?onload=onLoad"></script> -->
     <!-- Stylesheets -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -40,8 +41,9 @@
 
     <!-- Scripts -->
     <script src="index.js"></script>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <!-- <script src="login.js"></script> -->
     <script type='text/javascript' src="https://rawgit.com/hiddentao/squel/master/dist/squel.min.js"></script>
     <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
   </body>
 </html>
