basis for auth routing maybe

--- a/app/login.html
+++ b/app/login.html
@@ -1,11 +1,10 @@
-<!-- <script src="https://apis.google.com/js/platform.js?onload=init" async defer></script> -->
 <p>Login Page</p>
 
 <link rel="stylesheet" href="style.css">
 <p>Before you use the Data Dictionary designer you must sign using your Google account</p>
-<p>Username <input type="text"></input>
+<!-- <p>Username <input type="text"></input>
 <p>Password <input type="password"></input>
-<p><a href="#landing" class="button">Submit</a></p>
+<p><a href="#landing" class="button">Submit</a></p> -->
 
 
 <div id="signin"></div>
