--- a/app/createdd.html
+++ b/app/createdd.html
@@ -9,6 +9,7 @@
 <!-- Note for future self: Create entirety of HTML page before
     beginning javascript, that way it will be easier-->
 
+<form>
 <table id="datadictionary" class="mdl-data-table mdl-js-data-table">
   <tbody id="ddtable1">
     <tr>
@@ -22,7 +23,6 @@
       <th>Domain and Constraints</th>
       <th>FK Reference</th>
       <th>Data Description</th>
-      <!-- <th>Delete Row</th> -->
     </tr>
     <tr>
       <td><input type=text></td>
@@ -40,7 +40,13 @@
           <option>Grab list from MySQL</option>
       </td>
       <td><input type=text></td>
-      <td><input type=text></td>
+      <td>
+        <ul>
+          <li><input type="checkbox">AUTO_INCREMENT</li>
+          <li><input type="checkbox">NOT NULL</li>
+          <li><input type="checkbox">UNIQUE</li>
+        </ul>
+      </td>
       <td><input type=text></td>
       <td><input type=text></td>
       <td><button class="mdl-button mdl-js-button mdl-button--raised" onclick="deleteRow(event)"><i class="material-icons">&#xE15B;</i></td>
@@ -49,8 +55,6 @@
         id="addrow1" onclick="idHandler(event)">Add Row</button></td></tr>
   </tbody>
 </table>
-
-
-
-
+<input type="submit">
+</form>
 <script src="createdd.js"></script>
