login on main page

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
         <div class="mdl-layout__header-row">
           <!-- Title of the Header -->
           <span class="mdl-layout-title">Data Dictionary Creator</span>
+          <div id="loginDiv"><button>Something</button></div>
         </div>
       </header>
 
