--- a/app/createdd.html
+++ b/app/createdd.html
@@ -5,11 +5,10 @@
 <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored"
         id="addtable" onclick="addTable()">Add Table</button>
 <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored"
-        onclick="generateSQL()">Generate SQL</button>
+        onclick="submitTable()">Submit</button>
 <!-- Note for future self: Create entirety of HTML page before
     beginning javascript, that way it will be easier-->
 
-<form>
 <table id="datadictionary" class="mdl-data-table mdl-js-data-table">
   <tbody id="ddtable1">
     <tr>
@@ -55,6 +54,6 @@
         id="addrow1" onclick="idHandler(event)">Add Row</button></td></tr>
   </tbody>
 </table>
-<input type="submit">
-</form>
-<script src="createdd.js"></script>
+
+<!-- <button onclick="submitTable()">button test</button> -->
+<!-- <script src="createdd.js"></script> -->
