load and save working

--- a/app/createdd.html
+++ b/app/createdd.html
@@ -9,7 +9,7 @@
 <!-- Note for future self: Create entirety of HTML page before
     beginning javascript, that way it will be easier-->
 
-<table id="datadictionary" class="mdl-data-table mdl-js-data-table">
+<!-- <table id="datadictionary" class="mdl-data-table mdl-js-data-table">
   <tbody id="ddtable1">
     <tr>
       <th colspan=2><input type=text value="Table Name"></th>
@@ -53,7 +53,7 @@
       <tr><td><button class="mdl-button mdl-js-button mdl-button--raised"
         id="addrow1" onclick="idHandler(event)">Add Row</button></td></tr>
   </tbody>
-</table>
+</table> -->
 
 <!-- <button onclick="submitTable()">button test</button> -->
 <!-- <script src="createdd.js"></script> -->
