update with sql

--- a/app/createdd.html
+++ b/app/createdd.html
@@ -6,8 +6,8 @@
         id="addtable" onclick="addTable()">Add Table</button>
 <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored"
         onclick="submitTable()">Submit</button>
-<!-- Note for future self: Create entirety of HTML page before
-    beginning javascript, that way it will be easier-->
+<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored"
+        onclick="generateSQL()">Generate SQL</button>
 
 <!-- <table id="datadictionary" class="mdl-data-table mdl-js-data-table">
   <tbody id="ddtable1">
