--- a/app/landing.html
+++ b/app/landing.html
@@ -1,6 +1,5 @@
-<h3 id="userName">Landing page</h3>
+<h3 id="landingTitle">Your Data Dictionaries</h3>
 <div id="yourDictionaries"></div>
-<p><a href="#createdd" class="button">Create a Data Dictionary</a></p>
 <button class ="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" onclick="revealForm()">Create Data Dictionary</button>
 <form id="dictionaryForm">
   <label for="dictionaryName">Enter your data dictionary title</label>
